...
import { deleteSighting, getSightings, initializeDatabase, saveSighting } from "../database";
import type { Sighting } from "../types";
import { getErrorMessage } from "../utils";

const FIRST_SIGHTING: Sighting = {
  sighting_id: "integration-first",
  tops_number: "37025",
  class_number: "37",
  location_spotted: null,
  location_destination: null,
  photo_uri: null,
  spotted_at: "2026-10-05T10:00:00.000Z",
};
...
